# vicrow

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: CMakeLists.txt
backend/include/middleware/: cors.hpp
backend/include/models/: user.hpp
backend/include/routes/: health.hpp  users.hpp
backend/include/services/: prisma_client.hpp
backend/scripts/: prisma_query.sh  watch.sh
backend/src/: main.cpp
backend/src/middleware/: cors.cpp
backend/src/routes/: health.cpp  users.cpp
backend/src/services/: prisma_client.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: About.tsx  Home.tsx  Users.tsx
frontend/src/services/: api.ts
prisma/: init.sql  package-lock.json  package.json  schema.prisma  seed.ts  server.ts  tsconfig.json
scripts/: build.sh  dev.sh  setup.sh
